--- a/src/BlogBundle/Resources/views/BlogViews/Blog.html.twig
+++ b/src/BlogBundle/Resources/views/BlogViews/Blog.html.twig
@@ -210,10 +210,10 @@
 
 
                                 <div class="right">
-                                        <a href="#addEmployeeModal" style="color: green"
-                                           data-toggle="modal"><i class="fas fa-plus-circle"></i> Add A Post</a><br>
-                                        <a href="{{ path('blog_Managment') }}" style="color: darkred"
-                                        ><i class="fas fa-tasks" style="size: 14px"></i> Blog Manager</a>
+                                        <a href="#addEmployeeModal"
+                                           data-toggle="modal"><i class="fas fa-plus-circle" style="color: green"></i><span style="color: black"> Add A Post</span></a><br>
+                                        <a href="{{ path('blog_Managment') }}"
+                                        ><i class="fas fa-tasks" style="color: darkred"></i> <span style="color: black;font-family: Montserrat-Regular">Blog Manager</span></a>
 
                                     </div>
 
