--- a/src/BlogBundle/Resources/views/BlogViews/DetailBlog.html.twig
+++ b/src/BlogBundle/Resources/views/BlogViews/DetailBlog.html.twig
@@ -204,8 +204,8 @@
 
                                 <div class="right">
 
-                                    <a href="{{ path('blog_Managment') }}" style="color: darkred"
-                                    ><i class="fas fa-tasks" style="size: 14px"></i> Blog Manager</a>
+                                    <a href="{{ path('blog_Managment') }}"
+                                    ><i class="fas fa-tasks" style="color: darkred"></i> <span style="color: black;font-family: Montserrat-Regular">Blog Manager</span></a>
 
                                 </div>
 
