--- a/app/Resources/views/BaseAdmin.html.twig
+++ b/app/Resources/views/BaseAdmin.html.twig
@@ -501,6 +501,7 @@
                     <ul id="submenu-1" class="collapse" style="list-style: none;">
                         <li><a href="{{ path('admin_listPosts') }}">Posts</a></li>
                         <li><a href="{{ path('admin_listComments') }}">Comments</a></li>
+                        <li><a href="{{ path('Admin_PaymentsBlogList') }}">Blog Payments</a></li>
                     </ul>
                 </li>
                 <li>
