--- a/src/AdminBundle/Resources/views/AdminBlogViews/ListBlogPayment.html.twig
+++ b/src/AdminBundle/Resources/views/AdminBlogViews/ListBlogPayment.html.twig
@@ -11,7 +11,6 @@
                         <input type="text" id="myInput" class="search form-control" placeholder="What you looking for?">                    </div>
                     <div class="col-sm-6">
 
-                        <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add Admin Post</span></a>
                     </div>
                 </div>
             </div>
@@ -19,31 +18,41 @@
                 <thead>
                 <tr>
 
-                    <th>#</th>
                     <th>Author Name</th>
                     <th>Start Date</th>
                     <th>End Date Type</th>
                     <th>Likes Number</th>
                     <th>Comments Number</th>
                     <th>Estimated Payment</th>
+                    <th>Status</th>
 
                 </tr>
                 </thead>
                 <tbody>
-                {% for blogprofit in v %}
+                {% for blogposts in v %}
                 <tr>
 
-                    <td>{{ blogposts.postId }}</td>
+
                     <td>{{ blogposts.author.username }}</td>
-                    <td>{{ blogposts.postDate|date("m/d/Y")}}</td>
-                    <td>{{ blogposts.postType }}</td>
-                    <td>{{ blogposts.postContent }}</td>
-                    <td>{{ blogposts.articleTitle}}</td>
+                    <td>{{ blogposts.StartDate|date("m/d/Y")}}</td>
+                    <td>{{ blogposts.EndDate|date("m/d/Y")}}</td>
+                    <td>{{ blogposts.postLikesCount }}</td>
+                    <td>{{ blogposts.postCommentCount}}</td>
+                    <td>{{ blogposts.payment}}</td>
+                    {% if blogposts.Status==1 %}
+                    <td style="color: darkred">Submitted</td>
+                    {% endif %}
+                    {% if blogposts.Status==2 %}
+                    <td style="color: midnightblue">Payment Ongoing</td>
+                    {% endif %}
+                    {% if blogposts.Status==3 %}
+                        <td style="color: green">Paid</td>
+                    {% endif %}
+
 
                     <td>
-                        <a href="{{ path('Admin_DetailPost',{('postId'):blogposts.postId}) }}" class="view" title="View" data-toggle="tooltip"><i class="material-icons">&#xE417;</i></a>
-                        <a href="{{ path('Admin_UpdatePost',{('postId'):blogposts.postId}) }}" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                        <a href="{{ path('Admin_deletePost',{('postId'):blogposts.postId}) }}" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                        <a href="{{ path('Admin_PaymentsBlogListAccept',{('id'):blogposts.author.id,('idpayment'):blogposts.Id}) }}" class="view" title="Accept" data-toggle="tooltip"><i class="ion-checkmark-circled"></i></a>
+
                     </td>
                 </tr>
                     <div id="deleteEmployeeModal" class="modal fade">
@@ -60,7 +69,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                        <a href="{{ path('Admin_deletePost',{('postId'):blogposts.postId}) }}" type="button" class="btn btn-danger"><label style="color:white;">Delete</label></a>
+                                        <a href="" type="button" class="btn btn-danger"><label style="color:white;">Delete</label></a>
                                     </div>
                                 </form>
                             </div>
@@ -78,94 +87,6 @@
 
         </div>
     </div>
-
-    <!-- Edit Modal HTML -->
-    <div id="addEmployeeModal" class="modal fade">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                {{ form_start(form) }}
-
-
-
-
-
-
-                <div class="modal-header">
-                    <h4 class="modal-title">Add A Post</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label>Post Content</label>
-                        {{ form_widget(form.postContent, { 'attr': {'class': 'form-control', 'type' : 'textarea'} }) }}
-
-                    </div>
-                    <div class="form-group">
-                        <label>Post Type</label>
-                        {{ form_widget(form.postType, { 'attr': {'class': 'form-control', 'style':'font-size: 12px'} }) }}
-
-                    </div>
-                    <div class="form-group">
-                        <label>Article Title</label>
-                        {{ form_widget(form.articleTitle, { 'attr': {'class': 'form-control', 'type' : 'textarea'} }) }}
-
-                    </div>
-                    <div class="form-group">
-                        <label>Article Content</label>
-                        {{ form_widget(form.articleContent)}}
-
-                    </div>
-                    <div class="form-group">
-                        <label>Your Image</label>
-                        {{ form_widget(form.image, { 'attr': {'class': 'form-control', 'style':'font-size: 12px'} }) }}
-
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                    <input type="submit" onclick="myFunction()" id="form" name="form" class="btn btn-success" id="addb" value="Add">
-                </div>
-                {{ form_end(form) }}
-            </div>
-        </div>
-    </div>
-    <!-- Edit Modal HTML -->
-    <div id="editEmployeeModal" class="modal fade">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <form>
-                    <div class="modal-header">
-                        <h4 class="modal-title">Edit Employee</h4>
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <label>Name</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Email</label>
-                            <input type="email" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Address</label>
-                            <textarea class="form-control" required></textarea>
-                        </div>
-                        <div class="form-group">
-                            <label>Phone</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                        <input type="submit" class="btn btn-info" value="Save">
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <!-- Delete Modal HTML -->
-
     </body>
     <script src="//cdn.ckeditor.com/4.11.3/full/ckeditor.js"></script><script>
     CKEDITOR.replace('editor1');
