--- a/src/AdminBundle/Resources/views/AdminBlogViews/ListBlogPayment.html.twig
+++ b/src/AdminBundle/Resources/views/AdminBlogViews/ListBlogPayment.html.twig
@@ -1,5 +1,5 @@
 {% extends "BaseAdmin.html.twig" %}
-{% block title %}Blog{% endblock %}
+
 {% block body %}
     <body>
     <div class="container">
@@ -51,8 +51,9 @@
 
 
                     <td>
-                        <a href="{{ path('Admin_PaymentsBlogListAccept',{('id'):blogposts.author.id,('idpayment'):blogposts.Id}) }}" class="view" title="Accept" data-toggle="tooltip"><i class="ion-checkmark-circled"></i></a>
-
+                        {% if blogposts.Status==0 %}
+                        <a href="{{ path('Admin_PaymentsBlogListAccept',{('id'):blogposts.author.id,('idpayment'):blogposts.Id}) }}" class="view" title="Accept" data-toggle="tooltip"><i class="tim-icons icon-check-2"></i></a>
+                        {% endif %}
                     </td>
                 </tr>
                     <div id="deleteEmployeeModal" class="modal fade">
