--- a/app/Resources/views/BaseAdmin.html.twig
+++ b/app/Resources/views/BaseAdmin.html.twig
@@ -62,7 +62,7 @@
                 </li>
                 <li>
                     <a href="{{ path('Admin_PaymentsBlogList') }}">
-                        <i class="tim-icons icon-bell-55"></i>
+                        <i class="tim-icons icon-coins"></i>
                         <p>Payments</p>
                     </a>
                 </li>
