--- a/src/AdminBundle/Resources/views/AdminBlogViews/ListPosts.html.twig
+++ b/src/AdminBundle/Resources/views/AdminBlogViews/ListPosts.html.twig
@@ -11,7 +11,7 @@
                         <input type="text" id="myInput" class="search form-control" placeholder="What you looking for?">                    </div>
                     <div class="col-sm-6">
 
-                        <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="tim-icons icon-simple-add"></i> <span>Add Admin Post</span></a>
+                        <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="tim-icons icon-simple-add"></i>     Add Admin Post</a>
                     </div>
                 </div>
             </div>
@@ -116,6 +116,7 @@
                     </div>
                     <div class="form-group">
                         <label>Your Image</label>
+                        <i class="tim-icons icon-cloud-upload-94"></i>
                         {{ form_widget(form.image, { 'attr': {'class': 'form-control', 'style':'font-size: 12px'} }) }}
 
                     </div>
