--- a/src/BlogBundle/Resources/views/BlogViews/BlogManagment.html.twig
+++ b/src/BlogBundle/Resources/views/BlogViews/BlogManagment.html.twig
@@ -53,8 +53,8 @@
                     <br>
                     <ul class="list-group">
                         <li class="list-group-item" style="color: midnightblue;font-size: small;font-family: Montserrat-Bold">Profits</li>
-                        <li class="list-group-item text-right"><span class="pull-left"><strong>Likes</strong></span>{{ l|join }}</li>
-                        <li class="list-group-item text-right"><span class="pull-left"><strong>Comments</strong></span> {{ com|join }}</li>
+                        <li class="list-group-item text-right"><span class="pull-left"><strong>Likes</strong></span>{{ l|join*0.0333  }} Dt</li>
+                        <li class="list-group-item text-right"><span class="pull-left"><strong>Comments</strong></span> {{ com|join*0.00333 }} Dt</li>
                     </ul>
                         <br>
 
