--- a/app/Resources/views/BaseAdmin.html.twig
+++ b/app/Resources/views/BaseAdmin.html.twig
@@ -157,8 +157,10 @@
                                     <img src="{{ asset('AdminAssets/assets/img/anime3.png') }}" alt="Profile Photo">
                                 </div>
                                 <b class="caret d-none d-lg-block d-xl-block"></b>
-                                <p class="d-lg-none">
-                                    Log out
+                                <p class="d-lg-none" >
+                                    <a >
+                                        Log out
+                                    </a>
                                 </p>
                             </a>
                             <ul class="dropdown-menu dropdown-navbar">
@@ -170,7 +172,10 @@
                                 </li>
                                 <li class="dropdown-divider"></li>
                                 <li class="nav-link">
-                                    <a href="javascript:void(0)" class="nav-item dropdown-item">Log out</a>
+                                    <a href="{{  path('fos_user_security_logout')}}" class="nav-item dropdown-item">Log out</a>
+                                </li>
+                                <li class="nav-link">
+                                    <a href="{{ path('homepage') }}" class="nav-item dropdown-item">Go to the website</a>
                                 </li>
                             </ul>
                         </li>
