--- a/src/ContractBundle/Resources/views/Default/index.html.twig
+++ b/src/ContractBundle/Resources/views/Default/index.html.twig
@@ -1,6 +1,10 @@
 {% extends "SmartStartBase.html.twig" %}
 {% block title %}My Contracts{% endblock %}
 {% block body %}
+    <script src ="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="{{ asset('assets/css/stripe.css') }}">
+    <script src="https://js.stripe.com/v3/"></script>
+    <link rel="stylesheet" type="text/css" href="{{ asset('assets/css/stripe.css') }}">
     <section class="bg-title-page flex-c-m p-t-160 p-b-80 p-l-15 p-r-15" style="background-image: url(https://www.insidehighered.com/sites/default/server_files/media/contracts%20finkelstein.jpg);">
         <h2 class="tit6 t-center">
         </h2>
@@ -151,7 +155,7 @@
                                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                                         <span><strong>Delete</strong></span>
                                     </a>
-                                    <a href="#" class="btn btn-primary a-btn-slide-text">
+                                    <a href="#modalConfirmPayment{{ i.idContract }}" class="btn btn-primary a-btn-slide-text" data-toggle="modal" data-target="#modalConfirmPayment{{ i.idContract }}">
                                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                                         <span><strong>Pay</strong></span>
                                     </a>
@@ -195,12 +199,78 @@
                     <!--/.Content-->
                 </div>
             </div>
+
+            <!-- Add Modal HTML -->
+            <div id="modalConfirmPayment{{ i.idContract }}" class="modal fade">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <form name="addForm" id="addForm" method="post" action="{{ path('update_contract',{'id':i.idContract}) }}">
+                            <div class="modal-header">
+                                <h4 class="modal-title">Complete Your Contract...
+                                    <br/>
+                                    <small style="color: red">pls notice that all fields are required *</small>
+                                </h4>
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            </div>
+
+                            <div class="modal-body">
+                                <div class="form-group">
+
+                                    {{ form_start(form, {attr: {id: form.vars.id}}) }}
+                                    <div class="form-group">
+                                        <label for="card-element">
+                                            Credit or Debit Card
+                                        </label>
+                                        <div id="card-element" class="form-control"></div>
+                                        <div id="card-errors" class="help-block" role="alert"></div>
+                                    </div>
+                                    {{ form_widget(form.token) }}
+                                    {{ form_end(form) }}
+
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                                <input type="submit" id="valider" name="valider" class="btn btn-success" id="addb" value="Add" disabled>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         {% endfor %}
     </div>
 
+    <script type="text/javascript">
+        var form = document.getElementById('{{ form.vars.id }}');
+        var errors = document.getElementById('card-errors');
 
+        var stripe = Stripe('{{ stripe_public_key }}');
+        var elements = stripe.elements();
+        var card = elements.create('card');
 
+        card.mount('#card-element');
+        card.addEventListener('change', function(event) {
+            if (event.error) {
+                errors.textContent = event.error.message;
+                form.classList.add('has-error');
+            } else {
+                errors.textContent = '';
+                form.classList.remove('has-error');
+            }
+        });
 
+        form.addEventListener('submit', function(event) {
+            event.preventDefault();
 
-
+            stripe.createToken(card).then(function(result) {
+                if (result.error) {
+                    errors.textContent = result.error.message;
+                    form.classList.add('has-error');
+                } else {
+                    document.getElementById('{{ form.children.token.vars.id }}').setAttribute('value', result.token.id);
+                    form.submit();
+                }
+            });
+        });
+    </script>
 {% endblock %}
