--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -51,7 +51,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 @import url('https://use.fontawesome.com/releases/v5.7.2/css/all.css');
 
-@import url('https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js');
+@import url('https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/at.js/1.4.0/css/jquery.atwho.min.css');
 @import url('https://cdn.jsdelivr.net/npm/froala-editor@2.9.3/css/froala_style.min.css');
 @import url('https://cdn.jsdelivr.net/npm/froala-editor@2.9.3/js/froala_editor.min.js');
@@ -340,7 +340,7 @@ td.active {
   background-color: lightblue !important;
 }
 
-input[type="date" i] {
+input[type="date" ] {
   padding: 14px;
 }
 
