--- a/src/BlogBundle/Resources/views/BlogViews/BlogManagment.html.twig
+++ b/src/BlogBundle/Resources/views/BlogViews/BlogManagment.html.twig
@@ -11,7 +11,7 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-sm-3"><!--left col-->
+            <div class="col-lg-3" class="sticky-top"><!--left col-->
 
                 <ul class="list-group">
                     <li class="list-group-item" style="color: midnightblue;font-size: small;font-family: Montserrat-Bold">Profile</li>
@@ -45,6 +45,7 @@
                     <li class="list-group-item" style="color: midnightblue;font-size: small;font-family: Montserrat-Bold">Numbers</li>
                     <li class="list-group-item text-right"><span class="pull-left"><strong>Likes</strong></span>{{ l|join }}</li>
                     <li class="list-group-item text-right"><span class="pull-left"><strong>Comments</strong></span> {{ com|join }}</li>
+                    <li class="list-group-item text-right"><span class="pull-left"><strong>Views</strong></span> {{ view|join }}</li>
 
 
                 </ul>
@@ -228,34 +229,194 @@
 
                         <h4>Your Posts</h4>
                         <br><hr>
-                         {% for blogposts in v %}
-                        <div class="media">
-                            <img class="mr-3" src="{{ asset('uploads/images/' ~ blogposts.image) }}" width="64" height="64" alt="Generic placeholder image">
-                            <div class="media-body">
-                                <h5 class="mt-0">{{ blogposts.articleTitle }}</h5>
-                                {{ blogposts.articleContent|raw }}
-                            </div>
-                            <div class="right">
-                                <a href="{{ path('blog_delete',{('postId'):blogposts.postId}) }}" class="delete"><i class="fas fa-trash-alt" data-toggle="tooltip" title="Delete" style="color: darkred"></i></a>
 
-                                <a href="{{ path('Update_BlogPost',{('postId'):blogposts.postId}) }}"><i class="fas fa-edit" data-toggle="tooltip" title="Edit"style="color: green"></i></a><br><br>
-                                <i class="far fa-calendar" style="color: midnightblue;"></i> {{ blogposts.postDate|date("m/d/Y")}}
-                                <br>
-                                <i class="far fa-thumbs-up" style="color:midnightblue"></i>
-                                <span class="js-likes" style="color: midnightblue">{{ blogposts.postLikesCount }}</span>
-                                <span class="js-label" style="color: midnightblue">Like</span>
-                                <br>
-                                <i class="fas fa-comments" style="color:midnightblue"></i> {{ blogposts.postCommentCount }} Comments
-                            </div>
-                        </div>
-                             <br><hr>
-                        {% endfor %}
+                        <div class="container-fluid">
+                            <div class="row">
+                        {% for blogposts in v %}
+
+
+                                    <div class="col-lg-4 col-md-3 col-sm-4 col-xs-12">
+                                        <div class="tile">
+                                            <div class="wrapper">
+                                                <div class="header"> <strong>Article : </strong> {{ blogposts.articleTitle }}
+                                                <br>
+                                                    <br>
+                                               <i class="far fa-calendar" style="color: midnightblue;">  <p>{{ blogposts.postDate|date("m/d/Y")}}</p></i></div>
+
+                                                <div class="banner-img">
+                                                    <img src="{{ asset('uploads/images/' ~ blogposts.image) }}" alt="Image 1" width="100px" height="140px">
+                                                </div>
+
+
+                                                <div class="stats">
+
+                                                    <div>
+                                                        <strong>VIEWS</strong> {{ blogposts.views }}
+                                                    </div>
+
+                                                    <div>
+                                                        <strong>LIKES</strong> {{ blogposts.postLikesCount }}
+                                                    </div>
+
+                                                    <div>
+                                                        <strong>COMS</strong> {{ blogposts.postCommentCount }}
+                                                    </div>
+
+                                                </div>
+
+                                                <div class="footer">
+                                                    <center>
+                                                    <a href="{{ path('blog_delete',{('postId'):blogposts.postId}) }}" class="delete"><i class="fas fa-trash-alt" data-toggle="tooltip" title="Delete" style="color: darkred"></i></a>
+
+                                                    <a href="{{ path('Update_BlogPost',{('postId'):blogposts.postId}) }}"><i class="fas fa-edit" data-toggle="tooltip" title="Edit"style="color: green"></i></a>
+                                                    </center> </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+
+
+                        {% endfor %}</div>
+                </div>
 
                     </div><!--/tab-pane-->
-                </div> <center><div class="pagination flex-l-m flex-w m-l--6 p-t-25">
+                </div>
+
+                <center><div class="pagination flex-l-m flex-w m-l--6 p-t-25">
                         <center>{{ pagination(v, 'page') }}</center></div></center>
                 <br><br>
             </div>
+            <style>
+
+                * { margin: 0px; padding: 0px; }
+                body {
+                    background: #ecf1f5;
+                    font:14px "Open Sans", sans-serif;
+                    text-align:center;
+                }
+
+                .tile{
+                    width: 100%;
+                    background:#fff;
+                    border-radius:5px;
+                    box-shadow:0px 2px 3px -1px rgba(151, 171, 187, 0.7);
+                    float:left;
+                    transform-style: preserve-3d;
+                    margin: 10px 5px;
+
+                }
+
+                .header{
+                    border-bottom:1px solid #ebeff2;
+                    padding:19px 0;
+                    text-align:center;
+                    color:darkred;
+                    font-size:14px;
+                    font-size:14px;
+                    position:relative;
+                }
+
+                .banner-img {
+                    padding: 5px 5px 0;
+                }
+
+                .banner-img img {
+                    width: 100%;
+                    border-radius: 5px;
+                }
+
+                .dates{
+                    border:1px solid #ebeff2;
+                    border-radius:5px;
+                    padding:20px 55px;
+                    margin:10px 0px;
+                    font-size:16px;
+                    color:midnightblue;
+                    font-weight:600;
+                    overflow:auto;
+                }
+                .dates div{
+                    float:left;
+                    width:50%;
+                    text-align:center;
+                    position:relative;
+                }
+                .dates strong,
+                .stats strong{
+                    display:block;
+                    color:#adb8c2;
+                    font-size:11px;
+                    font-weight:700;
+                }
+                .dates span{
+                    width:1px;
+                    height:40px;
+                    position:absolute;
+                    right:0;
+                    top:0;
+                    background:#ebeff2;
+                }
+                .stats{
+                    border-top:1px solid #ebeff2;
+                    background:#f7f8fa;
+                    overflow:auto;
+                    padding:15px 0;
+                    font-size:16px;
+                    color:#59687f;
+                    font-weight:600;
+                    border-radius: 0 0 5px 5px;
+                }
+                .stats div{
+                    border-right:1px solid #ebeff2;
+                    width: 33.33333%;
+                    float:left;
+                    text-align:center
+                }
+
+                .stats div:nth-of-type(3){border:none;}
+
+                div.footer {
+                    text-align: right;
+                    position: relative;
+                    margin: 20px 5px;
+                }
+
+                div.footer a.Cbtn{
+                    padding: 10px 25px;
+                    background-color: #DADADA;
+                    color: #666;
+                    margin: 10px 2px;
+                    text-transform: uppercase;
+                    font-weight: bold;
+                    text-decoration: none;
+                    border-radius: 3px;
+                }
+
+                div.footer a.Cbtn-primary{
+                    background-color: #5AADF2;
+                    color: #FFF;
+                }
+
+                div.footer a.Cbtn-primary:hover{
+                    background-color: #7dbef5;
+                }
+
+                div.footer a.Cbtn-danger{
+                    background-color: #fc5a5a;
+                    color: #FFF;
+                }
+
+                div.footer a.Cbtn-danger:hover{
+                    background-color: #fd7676;
+                }
+                .navbar {
+                    overflow: hidden;
+                    background-color: #333;
+                    position: fixed;
+                    left: 0;
+                    width: 40%;
+                }
+            </style>
 
 
         </div>
